DigicielFull/force-app/main/default/objects/amc__Retrospective__c/amc__Retrospective__c.object-meta.xml
<CustomObject>
    <label>Retrospective</label>
    <nameField>
        <label>Retrospective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retrospectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>