DigicielFull/force-app/main/default/objects/amc__Retrospective__c/fields/amc__Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Date__c</fullName>
    <inlineHelpText>Identifie the date this Retrospective was held</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>