DigicielFull/force-app/main/default/objects/amc__Retrospective__c/fields/amc__Project__c.field-meta.xml
<CustomField>
    <fullName>amc__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Project this Retrospective relates to</inlineHelpText>
    <label>Project</label>
    <referenceTo>amc__Project__c</referenceTo>
    <relationshipLabel>Retrospectives</relationshipLabel>
    <relationshipName>Retrospectives</relationshipName>
    <type>Lookup</type>
</CustomField>