DigicielFull/force-app/main/default/objects/amc__Retrospective__c/fields/amc__Retrospective_Notes__c.field-meta.xml
<CustomField>
    <fullName>amc__Retrospective_Notes__c</fullName>
    <inlineHelpText>Detailed notes relating to the Retrospective</inlineHelpText>
    <label>Retrospective Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>